@@ -1255,14 +1255,16 @@ def updateCollectionCriterion(collection, i, v):
             break
 
 
-def toHTMLStrikedContent(content):
+def toHTMLStrikedContent(content, use_mltAssembly=False):
     """
       p_content is HTML having elements to strike between [[]].
       We will replace these [[]] by <strike> tags.  Moreover, we will append the 'mltAssembly'
       class to the <p> that surrounds the given p_content HTML.
     """
-    return content.replace('[[', '<strike>').replace(']]', '</strike>'). \
-        replace('<p>', '<p class="mltAssembly">')
+    content = content.replace('[[', '<strike>').replace(']]', '</strike>')
+    if use_mltAssembly:
+        content = content.replace('<p>', '<p class="mltAssembly">')
+    return content
 
 
 # ------------------------------------------------------------------------------
